<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_mesai_saat" Id="{47c57d99-67a0-4106-9f55-c888f8a3b512}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	

kaydet:BOOL;
i:INT;
baslangicDk:INT;
bitisDk:INT;
baslangicSn:INT;
bitisSn:INT;
cikis:BOOL;
sayac:INT;
sayac1:INT;
j:INT;
sayac2:INT;
n:INT;
sayac3:INT;
h:INT;
mesaiucret:INT;
saat:INT;
mesaiSaaat:INT;



x1_mesaiSaat:INT;
x1_5mesaiSaat:REAL;
x_3mesaiSaat:REAL;
tum_mesai:REAL;




x1_5baslangicSaat : INT;
x_3baslangicSaat:INT;




x1bslangicSaat:INT;
x1bslangicdakika:INT;
x1bitisSaat:INT;
x1bitisdakika:INT;



x1_5bslangicSaat:INT;
x1_5bslangicdakika:INT;
x1_5bitisSaat:INT;
x1_5bitisdakika:INT;




x3bslangicSaat:INT;
x3bslangicdakika:INT;
x3bitisSaat:INT;
x3bitisdakika:INT;










baslangicdakika: STRING;
baslangicsaat: STRING;
bitisdakika: STRING;
bitissaat: STRING;




a:BOOL;
b:BOOL;
c:BOOL;
d:BOOL;
e:BOOL;
f:BOOL;






































END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>